--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-dimension-v2",
-  "description": "Gatsby Starter - Dimension V2",
+  "name": "drewwei-home-v1",
+  "description": "Drew Wei",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Drew Wei",
   "dependencies": {
     "gatsby": "^2.18.18",
     "gatsby-plugin-manifest": "^2.2.34",
@@ -19,16 +19,18 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "npm run clean && gatsby build",
+    "clean": "rimraf .cache public",
+    "develop": "npm run clean && gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/unkdrew/techhive.drewwei.com"
   }
 }
