--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Drew Wei",
   "dependencies": {
     "gatsby": "^2.19.5",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.18",
