--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "drewwei-home-v1",
+  "name": "drewwei-com",
   "description": "Drew Wei",
   "version": "1.0.0",
   "author": "Drew Wei",
   "dependencies": {
-    "gatsby": "^2.19.5",
-    "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-manifest": "^2.2.38",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sass": "^2.1.26",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "gatsby": "^4.1.6",
+    "gatsby-plugin-manifest": "^4.1.4",
+    "gatsby-plugin-offline": "^5.1.4",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sass": "^5.1.1",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "keywords": [
     "gatsby"
@@ -27,9 +26,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gatsby-plugin-root-import": "^2.0.5",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "gatsby-plugin-root-import": "^2.0.8",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "repository": {
     "type": "git",
